Bug 900162: make bookmark panel items look like panel items, not contextmenu items. r=Gijs
UltraBlame original commit: 8a02ead5815ba11fb66a7251378df7bbaa97ccd2

--- a/browser/themes/linux/customizableui/panelUIOverlay.css
+++ b/browser/themes/linux/customizableui/panelUIOverlay.css
@@ -3,3 +3,7 @@
 
 
 %include ../../shared/customizableui/panelUIOverlay.inc.css
+
+#BMB_bookmarksPopup > menuitem[type="checkbox"] {
+  -moz-appearance: none !important; 
+}
