Bug 921038 - Move selected tab curve clip-paths into SVG-as-an-image so it is cached. r=mconley,gps
UltraBlame original commit: e771168640a7b3bf0b070de3ebd2d5e2fa18567f

--- a/browser/themes/windows/places/organizer-aero.css
+++ b/browser/themes/windows/places/organizer-aero.css
@@ -2,11 +2,12 @@
 
 
 
+%define WINDOWS_AERO
+%include ../windowsShared.inc
 %include organizer.css
+%undef WINDOWS_AERO
 
 %filter substitution
-%define toolbarHighlight rgba(255,255,255,.5)
-%define customToolbarColor hsl(210,75%,92%)
 
 #placesView {
   border-top: none;
