Bug 933262 - search box is too wide in palette, r=Unfocused
UltraBlame original commit: 0f56554e8c9b1c09be292c24ebbed3a4ef95ccdf

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -394,8 +394,13 @@ toolbarbutton.panel-multiview-anchor {
   -moz-box-flex: 1;
 }
 
-#search-container@inAnyPanel@ {
+#search-container[cui-areatype="menu-panel"] {
   width: @menuPanelWidth@;
+}
+
+toolbarpaletteitem[place="palette"] > #search-container {
+  min-width: 7em;
+  width: 7em;
 }
 
 #edit-controls@inAnyPanel@ > toolbarbutton,
