Bug 886444 - [Australis] Remove top padding on the window while in customization mode and also remove the ability to exit customization mode by clicking on the increased window padding. r=Gijs ui-r=shorlander
UltraBlame original commit: 176f2644c521a46ff4aef5e68649ea236b17a949

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -4000,7 +4000,7 @@ window > chatbox {
 }
 
 #main-window[customizing] #tab-view-deck {
-  padding: 28px 2em 2em;
+  padding: 0 2em 2em;
 }
 
 #main-window[customizing] #tab-view-deck,
@@ -4027,6 +4027,7 @@ window > chatbox {
 }
 
 #main-window[customizing] #TabsToolbar {
+  margin-top: 9px;
   background-clip: padding-box;
   border-right: 3px solid transparent;
   border-left: 3px solid transparent;
