--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -2468,7 +2468,7 @@ chatbox {
 }
 
 #main-window[customizing] #tab-view-deck {
-  padding: 2em;
+  padding: 0 2em 2em;
 }
 
 #customization-container {
