--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -255,7 +255,7 @@
   }
 
   
-  #main-window:not([customizing]):not([customize-exiting]) #navigator-toolbox:not(:-moz-lwtheme) {
+  #main-window:not([customizing]) #navigator-toolbox:not(:-moz-lwtheme) {
     overflow-y: hidden;
   }
 
