--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -198,8 +198,12 @@
 }
 
 
+
 .tab-background-middle[selected=true]:-moz-lwtheme {
   background-color: transparent;
+  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
+                    @fgTabTextureLWT@;
+
   
   background-size: auto 100%, auto 100%, auto auto;
 }
