Bug 931845 - Shows image tooltips immediately and with no animation. r=bgrins
UltraBlame original commit: 9cbb559661cd8072084b3b69e4e7ecf567c503e4

--- a/browser/themes/shared/devtools/common.inc.css
+++ b/browser/themes/shared/devtools/common.inc.css
@@ -115,8 +115,17 @@
 
 
 
-.devtools-tooltip.devtools-tooltip-panel .panel-arrowcontent {
+.devtools-tooltip .panel-arrowcontent {
   padding: 4px;
+}
+
+.devtools-tooltip .panel-arrowcontainer {
+  
+  transition: none;
+  
+
+
+  transform: none;
 }
 
 .devtools-tooltip-simple-text {
