Bug 922812 - Add an 'eval current top level function' command to scratchpad; r=past
UltraBlame original commit: e7e1fdf75d8c9eb06f106d608b212fa080d50340

--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -188,6 +188,11 @@ div.cm-s-mozilla span.CodeMirror-matchingbracket {
   color: black;
 }
 
+
+div.CodeMirror span.eval-text {
+  background-color: #ccd;
+}
+
 .cm-s-mozilla .CodeMirror-linenumber { 
   color: #667380;
 }
