--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -189,6 +189,11 @@ div.cm-s-mozilla span.CodeMirror-matchingbracket {
   color: white;
 }
 
+
+div.CodeMirror span.eval-text {
+  background-color: #556;
+}
+
 .cm-s-mozilla .CodeMirror-linenumber { 
   color: #5f7387;
 }
