--- a/browser/devtools/sourceeditor/codemirror/mozilla.css
+++ b/browser/devtools/sourceeditor/codemirror/mozilla.css
@@ -54,3 +54,17 @@
 .CodeMirror-vscrollbar {
   min-width: 10px;
 }
+
+
+
+.CodeMirror-dialog {
+  font: message-box;
+  padding: 5px 4px;
+  color: hsl(210,30%,85%);
+  background-image: url("chrome://browser/skin/devtools/background-noise-toolbar.png"),
+    linear-gradient(#3e4750, #3e4750);
+}
+
+.CodeMirror-dialog input {
+  font: message-box;
+}
