--- a/browser/themes/shared/devtools/webconsole.inc.css
+++ b/browser/themes/shared/devtools/webconsole.inc.css
@@ -93,12 +93,12 @@ a {
 }
 
 .jsterm-input-container {
-  background: white;
+  border-top-width: 1px;
+  border-top-style: solid;
 }
 
 #output-wrapper {
   direction: ltr;
-  border-bottom: 1px solid ThreeDShadow;
   overflow: auto;
 }
 
@@ -275,7 +275,8 @@ a {
 }
 
 .jsterm-input-node {
-  background: -moz-image-rect(url("chrome://browser/skin/devtools/commandline-icon.png"), 0, 32, 16, 16) no-repeat;
+  background-image: -moz-image-rect(url("chrome://browser/skin/devtools/commandline-icon.png"), 0, 32, 16, 16);
+  background-repeat: no-repeat;
   background-position: 0%;
 }
 
@@ -328,7 +329,7 @@ a {
 
 .navigation-marker {
   color: #aaa;
-  background: linear-gradient(#fff, #bbb, #fff) no-repeat left 50%;
+  background: linear-gradient(#aaa, #aaa) no-repeat left 50%;
   background-size: 100% 2px;
   margin-top: 6px;
   margin-bottom: 6px;
@@ -336,7 +337,30 @@ a {
 }
 
 .navigation-marker .url {
-  background: #fff;
   -moz-padding-end: 9px;
   text-decoration: none;
+}
+
+
+.theme-dark .jsterm-input-container,
+.theme-dark .jsterm-input-node {
+  background-color: #252c33; 
+  color: #8fa1b2; 
+  border-color: #131c26; 
+}
+
+.theme-dark .navigation-marker .url {
+  background: #131c26; 
+}
+
+
+.theme-light .jsterm-input-container,
+.theme-light .jsterm-input-node {
+  background-color: #fff; 
+  color: black; 
+  border-color: ThreeDShadow;
+}
+
+.theme-light .navigation-marker .url {
+  background: #fff; 
 }
