Bug 940262 - [Australis] Hide .tab-background in the early tabopen animation phase and show it after a short offset r=dao
From b7ac00600af262042d076ba5ac04138eb4ee0418 Mon Sep 17 00:00:00 2001

UltraBlame original commit: cd6b40046e85031fc78ceab262cba9e9c4ecf263

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -119,6 +119,19 @@ tabbrowser {
               max-width 230ms ease-out;
 }
 
+.tab-background {
+  
+
+  visibility: visible;
+  
+
+  transition: visibility 0ms 25ms;
+}
+
+.tab-background[selected]:not([fadein]):not([pinned]) {
+  visibility: hidden;
+}
+
 .tab-throbber:not([fadein]):not([pinned]),
 .tab-label:not([fadein]):not([pinned]),
 .tab-icon-image:not([fadein]):not([pinned]),
