--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -899,6 +899,8 @@ input[type=number]::-moz-number-wrapper {
 
 input[type=number]::-moz-number-text {
   -moz-appearance: none;
+  
+  -moz-user-modify: read-write;
   flex: 1;
   padding: 0;
   border: 0;
