Bug 635240 - Implementation of the layout and anonymous shadow tree portion of <input type=number>. r=dholbert
UltraBlame original commit: 435d9468467c92027872cbc08164fce966124c0d

--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -284,6 +284,10 @@ textarea:active {
   background-color: rgba(141, 184, 216, 0.5);
 }
 
+input[type=number]::-moz-number-spin-box {
+  display: none;
+}
+
 %ifdef MOZ_WIDGET_GONK
 
 input,
